# nacre

./: CHANGELOG.md  LICENSE  README.md  nacre.cabal
agda/: NacreTest.agda  agda2hs-config.yaml  nacre.agda-lib
agda/Nacre/Request/: Path.agda
agda/_build/2.8.0/agda/Nacre/Request/: Path.agdai
src/: Example.hs  Nacre.hs  NacreTest.hs
src/Nacre/: Contract.hs  Function.hs  Group.hs  Mode.hs  Pattern.hs  Request.hs  Response.hs  Responses.hs  Server.hs
src/Nacre/Contract/: Headers.hs  Path.hs  Query.hs
src/Nacre/Request/: Body.hs  Headers.hs  Method.hs  Path.hs  Query.hs
src/Nacre/Response/: Body.hs  Headers.hs  Status.hs
