cabal-version:      3.0
name:               nacre
version:            0.1.0.0
synopsis:           Domain-specific languages for describing composable web services
license:            BSD-3-Clause
license-file:       LICENSE
author:             Rashad Gover
maintainer:         phantomtype@protonmail.com
category:           Web
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Nacre
                    , NacreTest
                    , Example
                    , Nacre.Function
                    , Nacre.Group
                    , Nacre.Request
                    , Nacre.Request.Body
                    , Nacre.Request.Headers
                    , Nacre.Request.Method
                    , Nacre.Request.Path
                    , Nacre.Request.Query
                    , Nacre.Response
                    , Nacre.Response.Body
                    , Nacre.Response.Headers
                    , Nacre.Response.Status
                    , Nacre.Responses
    build-depends:    base ^>=4.20.0.0, bytestring, http-types, text, wai
    hs-source-dirs:   src
    default-language: GHC2024

test-suite nacre-test
    import:           warnings
    default-language: GHC2024
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.20.0.0,
        nacre
