cabal-version:      3.0
name:               nacre
version:            0.1.0.0
synopsis:           Domain-specific languages for describing composable web services
license:            BSD-3-Clause
license-file:       LICENSE
author:             Rashad Gover
maintainer:         phantomtype@protonmail.com
category:           Web
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Nacre, Nacre.Contract
    build-depends:    base ^>=4.20.0.0, bytestring, http-types, http-api-data, text, wai, profunctors
    hs-source-dirs:   src
    default-language: GHC2024
